
Important! The meter id reported in the json "id":"........" will
now always be the tpl id, if such an id was part of the telegram.
For most meters this is not a problem, but if you have a standalone
radio converter, or a meter with a wmbus plugin (radio converter meter side),
then you might get a different id.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Version 1.0.5: 2021-01-30

Xael South added support for the Gran-System-S electricity meters!
Thanks Xael!

Added support for evo868 water meter addon module.
Added support for whe542 heat cost allocator.

Marc Kolly improved the Waterstar meter and added better error codes
and another type/version detection combo! Thanks Marc!

Janus Bo Andersen fixed the omnipower driver! Thanks Janus!

Version 1.0.4: 2020-12-05

Nikodem added support for Multical803! Thanks Nikodem!

Added a warning to be printed if an rtl_sdr dongle is found when using auto
and either rtl_sdr or rtl_wmbus cannot be found in the path at startup.

Cinemarene added support for the Techem MK Radio 4 water meter.
Thanks Cinemarene!

Mira added support for Elster V200H water meter and the Elster Merlin 868 addon.
Thanks Mira!

Version 1.0.3: 2020-11-11

Add missing files and update man page for --nodeviceexit

Version 1.0.2: 2020-11-11

Fixed bug that prevented rtlwmbus[1234] from working.
Fixed a race that in one out of 100 runs, ignored a telegram
on stdin and exited without decoding it.

Wmbusmeters now warns if you have specified /dev/ttyUSB0:im871a:c1
but there is no /dev/ttyUSB0 or if there is an amb8465 on /dev/ttyUSB0.

Added --nodeviceexit

This option will force wmbusmeters to exit if no wmbus device is found.
For example if you specify /dev/ttyUSB0:im871a:c1 and you want
wmbusmeters to fail if there is no im871a on ttyUSB0.

Added --donotprobe=/dev/ttyUSB0

(Also made sure that specifying only rtlwmbus/rtl433 will not probe
serial ttys.  Specifying fully specified devices like