@@ -33,6 +33,8 @@ then you might get a different id.
 
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+Added support for the Apator Elf heat meter.
+
 Version 1.0.5: 2021-01-30
 
 Xael South added support for the Gran-System-S electricity meters!
